Archive/30f2a6bacbcc0724c5a47e415e75fbba-d8a6f6e6988ed9869ff36c1f09c9e787/output
main.cpp: In function ‘int main()’:
main.cpp:101:25: error: ‘assert’ was not declared in this scope
         assert(d == orig);
                         ^
